@startuml

class Juego{
    +  main(String[] args): void

}

class Buscaminas {
  - tablero: Tablero
  - jugador: Jugador
  + jugar(): void
}

class Tablero {
  - mapaReal: String[][]
  - mapaVisible: String[][]
  - partidaPerdida: boolean
  + Tablero()
  + inicializarMapas(): void
  + inicializarMapaVidible(): void
  + generarMinas(): void
  + generarNumeros(): void
  + marcarCasilla(fila: int, columna: int): void
  + colocarBandera(fila: int, columna: int): void
  + comprobarLimites(fila: int, columna: int): boolean
  + enseñarCasillas(fila: int, columna: int): void
  + partidaTerminada(): boolean
  + jugadorHaPerdido(): boolean
}

class Jugador {
  - scanner: Scanner
  + jugarTurno(tablero: Tablero): void
}

Buscaminas  -->  Tablero 
Buscaminas  -->  Jugador 
Juego --> Buscaminas

@enduml
